--- a/IdleSchemes.WebAdmin/Components/Layout/NavMenu.razor
+++ b/IdleSchemes.WebAdmin/Components/Layout/NavMenu.razor
@@ -27,12 +27,6 @@
             </a>
         </li>
         <li>
-            <a href="/templates">
-                <i class="bi bi-calendar2-fill"></i>
-                Event Templates
-            </a>
-        </li>
-        <li>
             <a href="/tickets">
                 <i class="bi bi-ticket-detailed-fill"></i>
                 Tickets
@@ -45,9 +39,27 @@
             </a>
         </li>
         <li>
+            <a href="/patrons">
+                <i class="bi bi-person-heart"></i>
+                Patrons
+            </a>
+        </li>
+        <li>
             <a href="/associates">
                 <i class="bi bi-person-badge-fill"></i>
                 Associates
+            </a>
+        </li>
+        <li>
+            <a href="/templates">
+                <i class="bi bi-calendar2-fill"></i>
+                Event Templates
+            </a>
+        </li>
+        <li>
+            <a href="/venues">
+                <i class="bi bi-shop"></i>
+                Venues
             </a>
         </li>
         <li>
