--- a/IdleSchemes.WebAdmin/Components/Pages/Users.razor
+++ b/IdleSchemes.WebAdmin/Components/Pages/Users.razor
@@ -2,7 +2,8 @@
 @inherits BaseAdminComponent<UsersViewModel>
 @layout MainLayout
 
-<PageTitle>Users</PageTitle>
+<PageTitle>@ViewModel.Title</PageTitle>
+
 <div class="row mt-2">
     <div class="col">
         <h1>@ViewModel.Title</h1>
