--- a/IdleSchemes.WebAdmin/Components/Layout/NavMenu.razor
+++ b/IdleSchemes.WebAdmin/Components/Layout/NavMenu.razor
@@ -27,9 +27,9 @@
             </a>
         </li>
         <li>
-            <a href="/tickets">
+            <a href="/registrations">
                 <i class="bi bi-ticket-detailed-fill"></i>
-                Tickets
+                Registrations
             </a>
         </li>
         <li>
