--- a/IdleSchemes.WebAdmin/Components/Pages/EventTemplates.razor
+++ b/IdleSchemes.WebAdmin/Components/Pages/EventTemplates.razor
@@ -2,7 +2,8 @@
 @inherits BaseAdminComponent<EventTemplatesViewModel>
 @layout MainLayout
 
-<PageTitle>Organizations</PageTitle>
+<PageTitle>@ViewModel.Title</PageTitle>
+
 <div class="row mt-2">
     <div class="col">
         <h1>@ViewModel.Title</h1>
