--- a/IdleSchemes.WebAdmin/Components/Layout/NavMenu.razor
+++ b/IdleSchemes.WebAdmin/Components/Layout/NavMenu.razor
@@ -58,19 +58,19 @@
         </li>
         <li>
             <a href="/venues">
-                <i class="bi bi-shop"></i>
+                <i class="bi bi-building-fill"></i>
                 Venues
             </a>
         </li>
         <li>
-            <a href="/income">
+            <a href="/finances">
                 <i class="bi bi-cash-stack"></i>
-                Income
+                Finances
             </a>
         </li>
         <li>
             <a href="/settings">
-                <i class="bi bi-building-fill-gear"></i>
+                <i class="bi bi-gear-fill"></i>
                 Settings
             </a>
         </li>
