--- a/IdleSchemes.WebAdmin/Components/Layout/NavMenu.razor
+++ b/IdleSchemes.WebAdmin/Components/Layout/NavMenu.razor
@@ -63,9 +63,9 @@
             </a>
         </li>
         <li>
-            <a href="/finances">
+            <a href="/payments">
                 <i class="bi bi-cash-stack"></i>
-                Finances
+                Payments
             </a>
         </li>
         <li>
