--- a/IdleSchemes.WebAdmin/Components/Pages/Dash.razor
+++ b/IdleSchemes.WebAdmin/Components/Pages/Dash.razor
@@ -1,5 +1,5 @@
 ﻿@page "/"
-@inherits BaseAdminComponent<HomeViewModel>
+@inherits BaseAdminComponent<DashViewModel>
 @layout MainLayout
 
 <PageTitle>Home</PageTitle>
