--- a/IdleSchemes.WebAdmin/Components/Pages/Organizations.razor
+++ b/IdleSchemes.WebAdmin/Components/Pages/Organizations.razor
@@ -1,4 +1,5 @@
 ﻿@page "/orgs"
+@using IdleSchemes.WebAdmin.ViewModels.Global
 @inherits BaseAdminComponent<OrganizationsViewModel>
 @layout MainLayout
 
