--- a/IdleSchemes.WebAdmin/Components/Pages/Regions.razor
+++ b/IdleSchemes.WebAdmin/Components/Pages/Regions.razor
@@ -1,4 +1,5 @@
 ﻿@page "/regions"
+@using IdleSchemes.WebAdmin.ViewModels.Global
 @inherits BaseAdminComponent<RegionsViewModel>
 @layout MainLayout
 
