--- a/IdleSchemes.WebAdmin/Components/_Imports.razor
+++ b/IdleSchemes.WebAdmin/Components/_Imports.razor
@@ -11,5 +11,8 @@
 @using IdleSchemes.WebAdmin.Components.Common
 @using IdleSchemes.WebAdmin.Components.Layout
 @using IdleSchemes.WebAdmin.ViewModels
+@using IdleSchemes.WebAdmin.ViewModels.Global
+@using IdleSchemes.WebAdmin.ViewModels.Organizations
+@using IdleSchemes.WebAdmin.ViewModels.Personal
 @using IdleSchemes.Core.Helpers
 @using IdleSchemes.Core.Services
