--- a/IdleSchemes.WebAdmin/Components/Layout/NavMenu.razor
+++ b/IdleSchemes.WebAdmin/Components/Layout/NavMenu.razor
@@ -21,55 +21,55 @@
     <hr />
     <ul class="list-unstyled">
         <li>
-            <a href="/events">
+            <a href="/org/events">
                 <i class="bi bi-calendar-week-fill"></i>
                 Events
             </a>
         </li>
         <li>
-            <a href="/registrations">
+            <a href="/org/registrations">
                 <i class="bi bi-ticket-detailed-fill"></i>
                 Registrations
             </a>
         </li>
         <li>
-            <a href="/reviews">
+            <a href="/org/reviews">
                 <i class="bi bi-chat-heart-fill"></i>
                 Reviews
             </a>
         </li>
         <li>
-            <a href="/patrons">
+            <a href="/org/patrons">
                 <i class="bi bi-person-heart"></i>
                 Patrons
             </a>
         </li>
         <li>
-            <a href="/associates">
+            <a href="/org/associates">
                 <i class="bi bi-person-badge-fill"></i>
                 Associates
             </a>
         </li>
         <li>
-            <a href="/templates">
+            <a href="/org/templates">
                 <i class="bi bi-calendar2-fill"></i>
                 Event Templates
             </a>
         </li>
         <li>
-            <a href="/venues">
+            <a href="/org/venues">
                 <i class="bi bi-building-fill"></i>
                 Venues
             </a>
         </li>
         <li>
-            <a href="/payments">
+            <a href="/org/payments">
                 <i class="bi bi-cash-stack"></i>
                 Payments
             </a>
         </li>
         <li>
-            <a href="/settings">
+            <a href="/org/settings">
                 <i class="bi bi-gear-fill"></i>
                 Settings
             </a>
@@ -80,19 +80,19 @@
     <hr />
     <ul class="list-unstyled">
         <li>
-            <a href="/regions">
+            <a href="/global/regions">
                 <i class="bi bi-pin-map-fill"></i>
                 Regions
             </a>
         </li>
         <li>
-            <a href="/users">
+            <a href="/global/users">
                 <i class="bi bi-people-fill"></i>
                 Users
             </a>
         </li>
         <li>
-            <a href="/orgs">
+            <a href="/global/orgs">
                 <i class="bi bi-buildings-fill"></i>
                 Organizations
             </a>
