--- a/IdleSchemes.WebAdmin/Components/Pages/Global/Organizations.razor
+++ b/IdleSchemes.WebAdmin/Components/Pages/Global/Organizations.razor
@@ -1,4 +1,4 @@
-﻿@page "/orgs"
+﻿@page "/gloabl/orgs"
 @using IdleSchemes.WebAdmin.ViewModels.Global
 @inherits BaseAdminComponent<OrganizationsViewModel>
 @layout MainLayout
