--- a/IdleSchemes.WebAdmin/Components/Pages/Global/Regions.razor
+++ b/IdleSchemes.WebAdmin/Components/Pages/Global/Regions.razor
@@ -1,4 +1,4 @@
-﻿@page "/regions"
+﻿@page "/gloabl/regions"
 @using IdleSchemes.WebAdmin.ViewModels.Global
 @inherits BaseAdminComponent<RegionsViewModel>
 @layout MainLayout
