--- a/IdleSchemes.WebAdmin/Components/Pages/Global/Users.razor
+++ b/IdleSchemes.WebAdmin/Components/Pages/Global/Users.razor
@@ -1,4 +1,4 @@
-﻿@page "/users"
+﻿@page "/gloabl/users"
 @using IdleSchemes.WebAdmin.ViewModels.Global
 @inherits BaseAdminComponent<UsersViewModel>
 @layout MainLayout
