--- a/IdleSchemes.WebAdmin/Components/Layout/NavMenu.razor
+++ b/IdleSchemes.WebAdmin/Components/Layout/NavMenu.razor
@@ -8,6 +8,12 @@
             Dashboard
         </a>
     </li>
+    <li>
+        <a href="/me/payments">
+            <i class="bi bi-coin"></i>
+            My Pay
+        </a>
+    </li>
     @if (User?.IsModerator ?? false) {
         <li>
             <a href="#">
