Big ticket refactor

--- a/IdleSchemes.WebAdmin/Components/Pages/Organizations/Registrations.razor
+++ b/IdleSchemes.WebAdmin/Components/Pages/Organizations/Registrations.razor
@@ -27,7 +27,7 @@
                         <td>@registration.Registration.Id</td>
                         <td>@registration.Registration.Instance.Info.Name</td>
                         <td>@registration.Registration.User.Name</td>
-                        <td>@registration.Registration.Tickets.Count</td>
+                        <td>@registration.Registration.Claims.Count</td>
                         <td>@registration.Confirmed</td>
                     </tr>
                 }
