--- a/IdleSchemes.WebAdmin/Components/Pages/Organizations/Venues.razor
+++ b/IdleSchemes.WebAdmin/Components/Pages/Organizations/Venues.razor
@@ -8,6 +8,14 @@
     <div class="col">
         <h1>@ViewModel.Title</h1>
     </div>
+    <div class="col text-end">
+        <div class="btn-group">
+            <a class="btn btn-primary" href="/org/venues/new">
+                <i class="bi bi-plus-lg"></i>
+                New Venue
+            </a>
+        </div>
+    </div>
 </div>
 <div class="row">
     <div class="col">
